# QRVision

./: .replit  README.md  README_GE.md  README_JP.md  README_KR.md  README_RU.md  breakpoints.txt  main.py  models.py  pyproject.toml  qrdata.csv  replit.nix  replit.txt
static/: access.js  script.js  styles.css
templates/: admin.html  db_view.html  index.html  operator.html
