[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Reveni324@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask = "^3.0.0"
gunicorn = "^21.2.0"
opencv-python = "^4.5.3.56"
opencv-contrib-python = "^4.5.3.56"
numpy = "^1.26.4"
pyzbar = "^0.1.9"
scikit-learn = "^1.4.2"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.30"
replit = "4.0.0"
flask-login = "^0.6.3"
werkzeug = "^3.0.3"
flask-bcrypt = "^1.0.1"
flask-sock = "^0.7.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
